--- a/kind/multiple-es-instances-all-apps-enabled-values.yaml
+++ b/kind/multiple-es-instances-all-apps-enabled-values.yaml
@@ -5,49 +5,62 @@
 #
 #
 # to make template invoke the following:
-# => helm template dm-benchmark charts/zeebe-benchmark -f kind/multiple-es-instances-all-apps-enabled-values.yaml --output-dir out_multiple-es-instances-all-apps-enabled-values
+# => helm dependency update charts/zeebe-benchmark && helm template dm-benchmark-m charts/zeebe-benchmark -f kind/multiple-es-instances-all-apps-enabled-values.yaml --output-dir out_multiple/multiple-es-all-apps-enabled-values
 #
 # to install charts invoke the following:
-# => helm install dm-benchmark charts/zeebe-benchmark -f kind/multiple-es-instances-all-apps-enabled-values.yaml --render-subchart-notes
+# => helm dependency update charts/zeebe-benchmark && helm install dm-benchmark-m charts/zeebe-benchmark -f kind/multiple-es-instances-all-apps-enabled-values.yaml --render-subchart-notes
 #
 # to uninstall charts invoke the following:
-# => helm uninstall dm-benchmark && kubectl delete pvc -l app.kubernetes.io/instance=dm-benchmark && kubectl delete pvc -l release=dm-benchmark
+# => helm uninstall dm-benchmark-m && kubectl delete pvc -l app.kubernetes.io/instance=dm-benchmark-m && kubectl delete pvc -l release=dm-benchmark-m
 #
 # delete namespace
 # => kubectl delete namespace dm-benchmark-multiple-es-instances-all-apps-enabled
 #
 
 camunda-platform:
-
+  global:
+    elasticsearch:
+      zeebe:
+        host: "{{ .Release.Name }}-elasticsearch-zeebe"
+        clusterName: "elastic-cluster"
+      tasklist:
+        host: "{{ .Release.Name }}-elasticsearch-tasklist"
+        clusterName: "elastic-cluster"
+      operate:
+        host: "{{ .Release.Name }}-elasticsearch-operate"
+        clusterName: "elastic-cluster"
+      optimize:
+        host: "{{ .Release.Name }}-elasticsearch-optimize"
+        clusterName: "elastic-cluster"
   zeebe:
     # ZEEBE_BROKER_THREADS_CPUTHREADCOUNT
-    cpuThreadCount: "3"
+    #cpuThreadCount: "3"
     # ZEEBE_BROKER_THREADS_IOTHREADCOUNT
-    ioThreadCount: "3"
-    env:
-      - name: ZEEBE_BROKER_DATA_DISKUSAGEREPLICATIONWATERMARK
-        value: "0.87"
-      - name: ZEEBE_BROKER_DATA_DISKUSAGECOMMANDWATERMARK
-        value: "0.85"
-    resources:
-      limits:
-        memory: "4Gi"
-        cpu: "2000m"
-      requests:
-        memory: "4Gi"
-        cpu: "1350m"
+    #ioThreadCount: "3"
+    #env:
+      #- name: ZEEBE_BROKER_DATA_DISKUSAGEREPLICATIONWATERMARK
+        #value: "0.87"
+      #- name: ZEEBE_BROKER_DATA_DISKUSAGECOMMANDWATERMARK
+        #value: "0.85"
+    #resources:
+      #limits:
+        #memory: "4Gi"
+        #cpu: "2000m"
+      #requests:
+        #memory: "4Gi"
+        #cpu: "1350m"
 
-  zeebe-gateway:
-    env:
-      - name: ZEEBE_GATEWAY_THREADS_MANAGEMENTTHREADS
-        value: "2"
-    resources:
-      limits:
-        memory: "2Gi"
-        cpu: "2"
-      requests:
-        memory: "1Gi"
-        cpu: "1"
+  #zeebe-gateway:
+    #env:
+      #- name: ZEEBE_GATEWAY_THREADS_MANAGEMENTTHREADS
+        #value: "2"
+    #resources:
+      #limits:
+        #memory: "2Gi"
+        #cpu: "2"
+      #requests:
+        #memory: "1Gi"
+        #cpu: "1"
 
   operate:
     enabled: true
@@ -69,8 +82,14 @@ camunda-platform:
         memory: "400Mi"
         cpu: "400m"
 
+  identity:
+    enabled: false
+
+  postgresql:
+    enabled: false
+
   optimize:
-    enabled: true
+    enabled: false
     resources:
       limits:
         memory: "4Gi"
@@ -79,12 +98,13 @@ camunda-platform:
         memory: "1500Mi"
         cpu: "500m"
 
-  postgresql:
+  elasticsearch:
     enabled: false
 
   elasticsearch-zeebe:
     enabled: true
     master:
+      replicaCount: 2
       resources:
         limits:
           memory: "3Gi"
@@ -96,17 +116,7 @@ camunda-platform:
   elasticsearch-tasklist:
     enabled: true
     master:
-      resources:
-        limits:
-          memory: "3Gi"
-          cpu: "1"
-        requests:
-          memory: "2Gi"
-          cpu: "500m"
-
-  elasticsearch-optimize:
-    enabled: true
-    master:
+      replicaCount: 1
       resources:
         limits:
           memory: "3Gi"
@@ -118,6 +128,7 @@ camunda-platform:
   elasticsearch-operate:
     enabled: true
     master:
+      replicaCount: 1
       resources:
         limits:
           memory: "3Gi"
@@ -126,5 +137,93 @@ camunda-platform:
           memory: "2Gi"
           cpu: "500m"
 
+  elasticsearch-optimize:
+    enabled: false
+    master:
+      replicaCount: 1
+      resources:
+        limits:
+          memory: "3Gi"
+          cpu: "1"
+        requests:
+          memory: "2Gi"
+          cpu: "500m"
+
+starter:
+  rate: 5
+
+worker:
+  replicas: 1
+
+timer:
+  replicas: 1
+  rate: 5
+
+publisher:
+  replicas: 1
+  rate: 5
+
+retentionPolicy:
+  enabled: true
+  # Every 5 minutes => https://crontab.guru/#*/5_*_*_*_*
+  schedule: "*/5 * * * *"
+  policies:
+    - name: zeebe-
+      maxSize:
+      unit: minutes
+      timeToLive: 5
+    - name: operate-
+      unit: minutes
+      timeToLive: 5
+    - name: tasklist-
+      unit: minutes
+      timeToLive: 5
+    # the following are not consumed by operate so we want to get rid of them rather quickly
+    - name: zeebe-record_message
+      maxSize: 1
+    - name: zeebe-record_process-instance-creation
+      maxSize: 1
+  client:
+    hosts:
+      - "http://RELEASE_NAME-elasticsearch-zeebe-master-hl:9200"
+      - "http://RELEASE_NAME-elasticsearch-tasklist-master-hl:9200"
+      - "http://RELEASE_NAME-elasticsearch-operate-master-hl:9200"
+
 prometheus-elasticsearch-exporter:
   enabled: false
+
+prometheus-elasticsearch-exporter-zeebe:
+  enabled: true
+  es:
+    uri: http://{{ .Release.Name }}-elasticsearch-zeebe:9200
+  serviceMonitor:
+    enabled: true
+    labels:
+      release: monitoring
+
+prometheus-elasticsearch-exporter-tasklist:
+  enabled: true
+  es:
+    uri: http://{{ .Release.Name }}-elasticsearch-tasklist:9200
+  serviceMonitor:
+    enabled: true
+    labels:
+      release: monitoring
+
+prometheus-elasticsearch-exporter-operate:
+  enabled: true
+  es:
+    uri: http://{{ .Release.Name }}-elasticsearch-operate:9200
+  serviceMonitor:
+    enabled: true
+    labels:
+      release: monitoring
+
+prometheus-elasticsearch-exporter-optimize:
+  enabled: false
+  es:
+    uri: http://{{ .Release.Name }}-elasticsearch-optimize:9200
+  serviceMonitor:
+    enabled: true
+    labels:
+      release: monitoring
