improve(operate): reduce log level to INFO

--- a/charts/zeebe-benchmark/test/golden/operate-configmap.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/operate-configmap.golden.yaml
@@ -41,6 +41,6 @@ data:
     logging:
       level:
         ROOT: INFO
-        io.camunda.operate: DEBUG
+        io.camunda.operate: INFO
     #Spring Boot Actuator endpoints to be exposed
     management.endpoints.web.exposure.include: health,info,conditions,configprops,prometheus,loggers,usage-metrics,backups
