--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -393,6 +393,10 @@ camunda-platform:
           fieldRef:
             fieldPath: metadata.namespace  
 
+    logging:
+      level:
+        io.camunda.operate: INFO
+
   tasklist:
     enabled: false
 
